--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   
   <!-- Open Graph / Social preview metadata (added without changing page behavior) -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://les-belles-du-quebec-bmdh.onrender.com/" />
+  <meta property="og:url" content="https://les-belles-du-quebec.netlify.app/" />
   <meta property="og:title" content="Page Photos-Modèle" />
   <meta property="og:description" content="Photographies portrait & modèles" />
-  <meta property="og:image" content="https://les-belles-du-quebec-bmdh.onrender.com/preview3.png" />
+  <meta property="og:image" content="https://les-belles-du-quebec.netlify.app/preview3.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
@@ -19,10 +19,10 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Page Photos-Modèle" />
   <meta name="twitter:description" content="Photographies portrait & modèles" />
-  <meta name="twitter:image" content="https://les-belles-du-quebec-bmdh.onrender.com/preview3.png" />
+  <meta name="twitter:image" content="https://les-belles-du-quebec.netlify.app/preview3.png" />
 
   <!-- Legacy image hint -->
-  <link rel="image_src" href="https://les-belles-du-quebec-bmdh.onrender.com/preview3.png" />
+  <link rel="image_src" href="https://les-belles-du-quebec.netlify.app/preview3.png" />
 
 
   <style>
