--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
 <h1>Les belles du Québec</h1>
 
-<button class="btn" id="openLogin">Accès sécurisé</button>
+<button class="btn" id="openLogin">Connexion / Accès sécurisé</button>
 
 <div class="modal" id="loginModal">
   <div class="modal-content">
